--- a/pom.xml
+++ b/pom.xml
@@ -173,14 +173,13 @@
             </plugin>
         </plugins>
 
-        <resources>
+        <!--<resources>
             <resource>
                 <directory>src/main/java</directory>
                 <includes>
                     <include>**/*.yml</include>
                     <include>**/*.properties</include>
                     <include>**/*.xml</include>
-                    <!--加载模板文件-->
                     <include>**/*.html</include>
                     <include>**/*.js</include>
                     <include>**/*.css</include>
@@ -189,7 +188,6 @@
                     <include>**/*.jpg</include>
                     <include>**/*.woff</include>
                     <include>**/*.ttf</include>
-                    <!--加载静态文件-->
                     <include>/static/</include>
                 </includes>
                 <filtering>false</filtering>
@@ -200,7 +198,6 @@
                     <include>**/*.yml</include>
                     <include>**/*.properties</include>
                     <include>**/*.xml</include>
-                    <!--加载模板文件-->
                     <include>**/*.html</include>
                     <include>**/*.js</include>
                     <include>**/*.css</include>
@@ -209,12 +206,11 @@
                     <include>**/*.jpg</include>
                     <include>**/*.woff</include>
                     <include>**/*.ttf</include>
-                    <!--加载静态文件-->
                     <include>/static/</include>
                 </includes>
                 <filtering>false</filtering>
             </resource>
-        </resources>
+        </resources>-->
 
     </build>
 
